# c4py

./: .gitignore  DEVELOPMENT.md  README.md  manifest.c4m  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  backup_and_restore.py  find_duplicates.py  ml_data_leakage.py  ml_dataset_diff.py  ml_dataset_verify.py  ml_experiment_snapshot.py  ml_workspace.py  portable_bundle.py  render_farm_monitor.py  shotgrid_delivery.py  track_changes.py  verify_delivery.py  vfx_workspace.py
src/c4py/: __init__.py  __main__.py  canonical.py  decoder.py  diff.py  encoder.py  entry.py  id.py  manifest.py  naturalsort.py  pool.py  reconcile.py  safename.py  scanner.py  store.py  validator.py  verify.py  workspace.py
src/pyc4/: __init__.py  decoder.py  diff.py  encoder.py  entry.py  id.py  manifest.py  naturalsort.py  safename.py  scanner.py  validator.py
tests/: test_canonical.py  test_cli.py  test_decoder.py  test_diff.py  test_encoder.py  test_entry.py  test_id.py  test_manifest.py  test_naturalsort.py  test_pool.py  test_reconcile.py  test_safename.py  test_scanner.py  test_store.py  test_validator.py  test_verify.py  test_workspace.py
