[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c4py"
version = "1.0.12"
description = "C4 universal content identification — SMPTE ST 2114:2017"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Joshua Kolden", email = "joshua@avalanche.io" },
]
keywords = ["c4", "content-addressing", "hash", "identification", "smpte", "c4m", "manifest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Avalanche-io/c4py"
Documentation = "https://github.com/Avalanche-io/c4py"
Repository = "https://github.com/Avalanche-io/c4py"
Issues = "https://github.com/Avalanche-io/c4py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
c4py = "c4py.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/c4py"]

[tool.hatch.build.targets.sdist]
exclude = ["manifest.c4m"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
